@@ -1,3 +1,6 @@
+* Mon Jan 13 2003 Philip Tellis
+- sample client handles accented characters correctly.
+
 * Thu Dec 18 2002 Philip Tellis
 - sample client now handles sending of bell with ^G and sounding of bell
 when it receives it
